# remindmec

./: .gitignore  README.md
8086/: disassemble_8086.c  simulate_8086_ISA.c  simulate_8086_ISA.h  tables.c
framebuffer/: api.h  font.c  font.h  manager.c  render.c  screen.c  screen.h  shorttypes.h  user_window.c
opengl/: CMakeLists.txt  fragment.fs  matrix.c  matrix.h  shader.c  shader.h  texture.c  texture.h  vertex.vs  window.c
opengl/glad/include/glad/: glad.h
opengl/glad/src/: glad.c
perfaware/part1_8086/: debug_output.c  simulate_8086_ISA.h  tables.c
perfaware/part2_haversine/: allocator.h  benchmark_file_io.c  benchmarks.h  generate_input.c  haversine.h  metrics.c  metrics.h  parse_haversine_json.c  test_metrics.c
pipe_fork/: api.h  manager.c  user_window.c
quicksort/: a.out
random/quicksort/: quicksort.c
random/resolver/: hash_map_test.c  main.c
random/selectionsort-asm/: selectsort.c
resolver/: Dockerfile  hash_map.c  hash_map_test.c  main.c
